[project]
authors = [
  { name = "Scientific Python Developers" },
  { name = "Sam Vente", email = "savente93@proton.me" },
]
name = "spec0-schedule"
requires-python = ">= 3.11"
version = "1.0.0"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.pixi.workspace]
channels  = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
generate-schedule = { cmd = ["python", "generate-schedule.py"] }


[tool.pixi.dependencies]
pandas    = "*"
requests  = "*"
packaging = ">=25.0,<26"
